--- a/views/admin/edit_product.hbs
+++ b/views/admin/edit_product.hbs
@@ -7,15 +7,6 @@
                 <input type="text" name="name" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.name}}">
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category</label>
                 <input type="text" name="category" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.category}}">
-                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seller Name</label>
-                <input type="text" name="seller_name" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.seller_name}}">         
-                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seller Contact Details</label>
-                <input type="tel" name="seller_phone_number" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.seller_phone_number}}">
-                <input type="email" name="seller_email" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.seller_email}}">
-                
-                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seller Address</label>
-                <input type="text" name="seller_address" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.color}}">
-
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Color</label>
                 <input type="text" name="color" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.color}}">
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
@@ -27,6 +18,14 @@
                 <input onchange="change_condition()"
                 class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
                 id="Image" name="image" type="file">
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seller Name</label>
+                <input type="text" name="seller_name" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.seller_name}}">         
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seller Contact Details</label>
+                <input type="tel" name="seller_phone_number" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.seller_phone_number}}">
+                <br>
+                <input type="email" name="seller_email" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.seller_email}}">  
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seller Address</label>
+                <input type="text" name="seller_address" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.seller_address}}">
                 <!-- hidden input below is used to pass whether image is changed or not -->
                 <input type="text" value="false" id="condition" name="condition" hidden>
                  <button type="submit"
